[Change]		vehicle_ammo.xml updated to remove all things from the base game that are NOT changed by the mod
[Change]		vehicle_equipment.xml updated to remove all things from the base game that are NOT changed by the mod
[Change]		vehicle_types.xml updated to remove all things from the base game that are NOT changed by the mod


==V9.0A (INTERNAL)==

[Change]		Archives removed from mod, directories renamed to match archive names (EXCEPT SUBMODS RELATING TO GAMESTATE_DIFFICULTY AS THERE ARE CTDs)

[op="delete"]	agent_types.xml
[op="delete"]	damage_types.xml
[op="delete"]	doodad_types.xml
[op="delete"]	equipment_sets_by_level.xml
[op="delete"]	organisations.xml (relations XML under normal gamestate, not difficulty)
[op="delete"]	research.xml
[op="delete"]	ufo_growth_lists.xml
[op="delete"]	ufo_incursions.xml
[op="delete"]	ufo_mission_preference.xml
[op="delete"]	ufopaedia.xml
[op="delete"]	vehicle_ammo.xml
[op="delete"]	vehicle_equipment.xml
[op="delete"]	vehicle_types.xml

[Add]		00_agent_and_vehicle_equipment_xml_keys_1.ods which lists the current XML tags and descriptions for Agent and Vehicle Equipment (OpenDocument Format)
[Add]		00_ewm_agent_equipment_id_list_1.txt which lists every Agent Equipment ID available to organisations, aliens and X-COM (SPOILERS WITHIN)
[Add]		00_ewm_human_tech_level_equipment_list_1.txt which lists every piece of equipment available to human organisations at every tech level (SPOILERS WITHIN)
[Add]		00_agent_and_vehicle_equipment_xml_keys_1.xml which lists the current XML tags for Agent and Vehicle Equipment

[Add]		agent_types.xml (For future alien variants and load-outs)

[Add]		Dimension Missile ENTROPY added to the Agent Equipment List (To be implemented as an alien weapon)

[Add]		Vortex Boomeroid added to the Agent Equipment List. This tracks like a boomeroid but has slightly less power than a Vortex Mine at 130 instead of 150 (To be implemented as an alien weapon)
